# kubectl-tail

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  kubernetes.rs  lib.rs  main.rs  tests.rs  types.rs  ui.rs  utils.rs
src/ui/: app.rs  events.rs  layout.rs  mod.rs  renderer.rs  widgets.rs
