[package]
name = "kubectl-tail"
version = "0.1.0"
authors = ["Nikolay Denev <ndenev@gmail.com>"]
edition = "2024"

[dependencies]
kube = { version = "2.0", features = ["runtime", "derive", "http-proxy"] }
k8s-openapi = { version = "0.26", features = ["earliest"] }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
ratatui = "0.29"
crossterm = "0.29"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
tokio-stream = "0.1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
